// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`internal-calls > callAnotherContract 1`] = `
{
  "args": [],
  "callType": "CALL",
  "called": [
    {
      "args": [],
      "callType": "CALL",
      "called": [
        {
          "callType": "INTERNAL",
          "called": [],
          "contractFQN": "test-contracts/internal-calls/CalleeContract.sol:CalleeContract",
          "depth": 1,
          "from": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          "functionName": "internalFunction2",
          "functionType": "function",
          "lineEnd": 19,
          "lineStart": 16,
          "precompile": false,
          "rawData": "0x",
          "result": {
            "isCreate": false,
            "isError": false,
            "logs": [],
            "returnValueRaw": "",
            "type": "FunctionResultEvent",
          },
          "source": "test-contracts/internal-calls/CalleeContract.sol",
          "to": "0x5fbdb2315678afecb367f032d93f642f64180aa3",
          "type": "FunctionCallEvent",
          "value": 0n,
        },
        {
          "callType": "INTERNAL",
          "called": [],
          "contractFQN": "test-contracts/internal-calls/CalleeContract.sol:CalleeContract",
          "depth": 1,
          "from": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          "functionName": "privateFunction2",
          "functionType": "function",
          "lineEnd": 24,
          "lineStart": 21,
          "precompile": false,
          "rawData": "0x",
          "result": {
            "isCreate": false,
            "isError": false,
            "logs": [],
            "returnValueRaw": "",
            "type": "FunctionResultEvent",
          },
          "source": "test-contracts/internal-calls/CalleeContract.sol",
          "to": "0x5fbdb2315678afecb367f032d93f642f64180aa3",
          "type": "FunctionCallEvent",
          "value": 0n,
        },
      ],
      "contractFQN": "test-contracts/internal-calls/CalleeContract.sol:CalleeContract",
      "depth": 1,
      "from": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
      "functionName": "callInternalAndPrivate2",
      "functionType": "function",
      "lineEnd": 14,
      "lineStart": 9,
      "precompile": false,
      "rawData": "0x681413d1",
      "result": {
        "isCreate": false,
        "isError": false,
        "logs": [
          {
            "args": [
              "0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512",
              "internalFunction2 called",
              2n,
            ],
            "contractFQN": "test-contracts/internal-calls/CalleeContract.sol:CalleeContract",
            "eventName": "Log",
            "eventSignature": "Log(address,string,uint256)",
            "functionName": "callInternalAndPrivate2",
            "functionType": "function",
            "rawData": [
              "0x5fbdb2315678afecb367f032d93f642f64180aa3",
              [
                "0xfd33e90d0eac940755277aa91045b95664988beeeafc4ed7d1281a6d83afbc00",
                "0x000000000000000000000000e7f1725e7734ce288f8367e1bb143e90bb3f0512",
              ],
              "0x000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000018696e7465726e616c46756e6374696f6e322063616c6c65640000000000000000",
            ],
          },
          {
            "args": [
              "0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512",
              "privateFunction2 called",
              3n,
            ],
            "contractFQN": "test-contracts/internal-calls/CalleeContract.sol:CalleeContract",
            "eventName": "Log",
            "eventSignature": "Log(address,string,uint256)",
            "functionName": "callInternalAndPrivate2",
            "functionType": "function",
            "rawData": [
              "0x5fbdb2315678afecb367f032d93f642f64180aa3",
              [
                "0xfd33e90d0eac940755277aa91045b95664988beeeafc4ed7d1281a6d83afbc00",
                "0x000000000000000000000000e7f1725e7734ce288f8367e1bb143e90bb3f0512",
              ],
              "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000000300000000000000000000000000000000000000000000000000000000000000177072697661746546756e6374696f6e322063616c6c6564000000000000000000",
            ],
          },
          {
            "args": [
              "0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512",
              "callInternalAndPrivate2 called",
              1n,
            ],
            "contractFQN": "test-contracts/internal-calls/CalleeContract.sol:CalleeContract",
            "eventName": "Log",
            "eventSignature": "Log(address,string,uint256)",
            "functionName": "callInternalAndPrivate2",
            "functionType": "function",
            "rawData": [
              "0x5fbdb2315678afecb367f032d93f642f64180aa3",
              [
                "0xfd33e90d0eac940755277aa91045b95664988beeeafc4ed7d1281a6d83afbc00",
                "0x000000000000000000000000e7f1725e7734ce288f8367e1bb143e90bb3f0512",
              ],
              "0x00000000000000000000000000000000000000000000000000000000000000400000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000000000000000000000000000000001e63616c6c496e7465726e616c416e6450726976617465322063616c6c65640000",
            ],
          },
        ],
        "returnValue": {
          "ok": true,
          "value": 6n,
        },
        "returnValueRaw": "0x0000000000000000000000000000000000000000000000000000000000000006",
        "type": "FunctionResultEvent",
      },
      "source": "test-contracts/internal-calls/CalleeContract.sol",
      "to": "0x5fbdb2315678afecb367f032d93f642f64180aa3",
      "type": "FunctionCallEvent",
      "value": 0n,
    },
  ],
  "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
  "depth": 0,
  "from": "0x0000000000000000000000000000000000000000",
  "functionName": "callAnotherContract",
  "functionType": "function",
  "lineEnd": 50,
  "lineStart": 46,
  "precompile": false,
  "rawData": "0x63e20347",
  "result": {
    "isCreate": false,
    "isError": false,
    "logs": [
      {
        "args": [
          "0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512",
          "internalFunction2 called",
          2n,
        ],
        "contractFQN": "test-contracts/internal-calls/CalleeContract.sol:CalleeContract",
        "eventName": "Log",
        "eventSignature": "Log(address,string,uint256)",
        "functionName": "callAnotherContract",
        "functionType": "function",
        "rawData": [
          "0x5fbdb2315678afecb367f032d93f642f64180aa3",
          [
            "0xfd33e90d0eac940755277aa91045b95664988beeeafc4ed7d1281a6d83afbc00",
            "0x000000000000000000000000e7f1725e7734ce288f8367e1bb143e90bb3f0512",
          ],
          "0x000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000020000000000000000000000000000000000000000000000000000000000000018696e7465726e616c46756e6374696f6e322063616c6c65640000000000000000",
        ],
      },
      {
        "args": [
          "0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512",
          "privateFunction2 called",
          3n,
        ],
        "contractFQN": "test-contracts/internal-calls/CalleeContract.sol:CalleeContract",
        "eventName": "Log",
        "eventSignature": "Log(address,string,uint256)",
        "functionName": "callAnotherContract",
        "functionType": "function",
        "rawData": [
          "0x5fbdb2315678afecb367f032d93f642f64180aa3",
          [
            "0xfd33e90d0eac940755277aa91045b95664988beeeafc4ed7d1281a6d83afbc00",
            "0x000000000000000000000000e7f1725e7734ce288f8367e1bb143e90bb3f0512",
          ],
          "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000000300000000000000000000000000000000000000000000000000000000000000177072697661746546756e6374696f6e322063616c6c6564000000000000000000",
        ],
      },
      {
        "args": [
          "0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512",
          "callInternalAndPrivate2 called",
          1n,
        ],
        "contractFQN": "test-contracts/internal-calls/CalleeContract.sol:CalleeContract",
        "eventName": "Log",
        "eventSignature": "Log(address,string,uint256)",
        "functionName": "callAnotherContract",
        "functionType": "function",
        "rawData": [
          "0x5fbdb2315678afecb367f032d93f642f64180aa3",
          [
            "0xfd33e90d0eac940755277aa91045b95664988beeeafc4ed7d1281a6d83afbc00",
            "0x000000000000000000000000e7f1725e7734ce288f8367e1bb143e90bb3f0512",
          ],
          "0x00000000000000000000000000000000000000000000000000000000000000400000000000000000000000000000000000000000000000000000000000000001000000000000000000000000000000000000000000000000000000000000001e63616c6c496e7465726e616c416e6450726976617465322063616c6c65640000",
        ],
      },
      {
        "args": {
          "message": "callAnotherContract called",
          "value": 0n,
        },
        "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
        "eventName": "Log",
        "eventSignature": "Log(string,uint256)",
        "functionName": "callAnotherContract",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
          ],
          "0x00000000000000000000000000000000000000000000000000000000000000400000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001a63616c6c416e6f74686572436f6e74726163742063616c6c6564000000000000",
        ],
      },
    ],
    "returnValue": {
      "ok": true,
      "value": 6n,
    },
    "returnValueRaw": "0x0000000000000000000000000000000000000000000000000000000000000006",
    "type": "FunctionResultEvent",
  },
  "source": "test-contracts/internal-calls/CallerContract.sol",
  "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
  "type": "FunctionCallEvent",
  "value": 0n,
}
`;

exports[`internal-calls > mixedCall 1`] = `
{
  "args": [
    2n,
  ],
  "callType": "CALL",
  "called": [
    {
      "callType": "INTERNAL",
      "called": [
        {
          "callType": "INTERNAL",
          "called": [],
          "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
          "depth": 0,
          "from": "0x0000000000000000000000000000000000000000",
          "functionName": "privateFunction",
          "functionType": "function",
          "lineEnd": 38,
          "lineStart": 35,
          "precompile": false,
          "rawData": "0x",
          "result": {
            "isCreate": false,
            "isError": false,
            "logs": [],
            "returnValueRaw": "",
            "type": "FunctionResultEvent",
          },
          "source": "test-contracts/internal-calls/CallerContract.sol",
          "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          "type": "FunctionCallEvent",
          "value": 0n,
        },
      ],
      "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
      "depth": 0,
      "from": "0x0000000000000000000000000000000000000000",
      "functionName": "internalFunction",
      "functionType": "function",
      "lineEnd": 29,
      "lineStart": 25,
      "precompile": false,
      "rawData": "0x",
      "result": {
        "isCreate": false,
        "isError": false,
        "logs": [],
        "returnValueRaw": "",
        "type": "FunctionResultEvent",
      },
      "source": "test-contracts/internal-calls/CallerContract.sol",
      "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
      "type": "FunctionCallEvent",
      "value": 0n,
    },
    {
      "callType": "INTERNAL",
      "called": [],
      "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
      "depth": 0,
      "from": "0x0000000000000000000000000000000000000000",
      "functionName": "privateFunction",
      "functionType": "function",
      "lineEnd": 38,
      "lineStart": 35,
      "precompile": false,
      "rawData": "0x",
      "result": {
        "isCreate": false,
        "isError": false,
        "logs": [],
        "returnValueRaw": "",
        "type": "FunctionResultEvent",
      },
      "source": "test-contracts/internal-calls/CallerContract.sol",
      "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
      "type": "FunctionCallEvent",
      "value": 0n,
    },
    {
      "callType": "INTERNAL",
      "called": [],
      "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
      "depth": 0,
      "from": "0x0000000000000000000000000000000000000000",
      "functionName": "internalFunction2",
      "functionType": "function",
      "lineEnd": 33,
      "lineStart": 31,
      "precompile": false,
      "rawData": "0x",
      "result": {
        "isCreate": false,
        "isError": false,
        "logs": [],
        "returnValueRaw": "",
        "type": "FunctionResultEvent",
      },
      "source": "test-contracts/internal-calls/CallerContract.sol",
      "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
      "type": "FunctionCallEvent",
      "value": 0n,
    },
    {
      "callType": "INTERNAL",
      "called": [
        {
          "callType": "INTERNAL",
          "called": [
            {
              "callType": "INTERNAL",
              "called": [],
              "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
              "depth": 0,
              "from": "0x0000000000000000000000000000000000000000",
              "functionName": "privateFunction",
              "functionType": "function",
              "lineEnd": 38,
              "lineStart": 35,
              "precompile": false,
              "rawData": "0x",
              "result": {
                "isCreate": false,
                "isError": false,
                "logs": [],
                "returnValueRaw": "",
                "type": "FunctionResultEvent",
              },
              "source": "test-contracts/internal-calls/CallerContract.sol",
              "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
              "type": "FunctionCallEvent",
              "value": 0n,
            },
          ],
          "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
          "depth": 0,
          "from": "0x0000000000000000000000000000000000000000",
          "functionName": "internalFunction",
          "functionType": "function",
          "lineEnd": 29,
          "lineStart": 25,
          "precompile": false,
          "rawData": "0x",
          "result": {
            "isCreate": false,
            "isError": false,
            "logs": [],
            "returnValueRaw": "",
            "type": "FunctionResultEvent",
          },
          "source": "test-contracts/internal-calls/CallerContract.sol",
          "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          "type": "FunctionCallEvent",
          "value": 0n,
        },
      ],
      "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
      "depth": 0,
      "from": "0x0000000000000000000000000000000000000000",
      "functionName": "publicFunction",
      "functionType": "function",
      "lineEnd": 44,
      "lineStart": 41,
      "precompile": false,
      "rawData": "0x",
      "result": {
        "isCreate": false,
        "isError": false,
        "logs": [],
        "returnValueRaw": "",
        "type": "FunctionResultEvent",
      },
      "source": "test-contracts/internal-calls/CallerContract.sol",
      "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
      "type": "FunctionCallEvent",
      "value": 0n,
    },
    {
      "args": [
        2n,
      ],
      "callType": "CALL",
      "called": [
        {
          "callType": "INTERNAL",
          "called": [
            {
              "callType": "INTERNAL",
              "called": [],
              "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
              "depth": 1,
              "from": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
              "functionName": "privateFunction",
              "functionType": "function",
              "lineEnd": 38,
              "lineStart": 35,
              "precompile": false,
              "rawData": "0x",
              "result": {
                "isCreate": false,
                "isError": false,
                "logs": [],
                "returnValueRaw": "",
                "type": "FunctionResultEvent",
              },
              "source": "test-contracts/internal-calls/CallerContract.sol",
              "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
              "type": "FunctionCallEvent",
              "value": 0n,
            },
          ],
          "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
          "depth": 1,
          "from": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          "functionName": "internalFunction",
          "functionType": "function",
          "lineEnd": 29,
          "lineStart": 25,
          "precompile": false,
          "rawData": "0x",
          "result": {
            "isCreate": false,
            "isError": false,
            "logs": [],
            "returnValueRaw": "",
            "type": "FunctionResultEvent",
          },
          "source": "test-contracts/internal-calls/CallerContract.sol",
          "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          "type": "FunctionCallEvent",
          "value": 0n,
        },
      ],
      "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
      "depth": 1,
      "from": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
      "functionName": "publicFunction",
      "functionType": "function",
      "lineEnd": 44,
      "lineStart": 41,
      "precompile": false,
      "rawData": "0x304877d10000000000000000000000000000000000000000000000000000000000000002",
      "result": {
        "isCreate": false,
        "isError": false,
        "logs": [
          {
            "args": {
              "message": "privateFunction called",
              "value": 0n,
            },
            "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
            "eventName": "Log",
            "eventSignature": "Log(string,uint256)",
            "functionName": "publicFunction",
            "functionType": "function",
            "rawData": [
              "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
              [
                "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
              ],
              "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000167072697661746546756e6374696f6e2063616c6c656400000000000000000000",
            ],
          },
          {
            "args": {
              "message": "internalFunction called",
              "value": 0n,
            },
            "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
            "eventName": "Log",
            "eventSignature": "Log(string,uint256)",
            "functionName": "publicFunction",
            "functionType": "function",
            "rawData": [
              "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
              [
                "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
              ],
              "0x000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000017696e7465726e616c46756e6374696f6e2063616c6c6564000000000000000000",
            ],
          },
        ],
        "returnValue": {
          "ok": true,
          "value": 7n,
        },
        "returnValueRaw": "0x0000000000000000000000000000000000000000000000000000000000000007",
        "type": "FunctionResultEvent",
      },
      "source": "test-contracts/internal-calls/CallerContract.sol",
      "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
      "type": "FunctionCallEvent",
      "value": 0n,
    },
    {
      "callType": "INTERNAL",
      "called": [
        {
          "callType": "INTERNAL",
          "called": [
            {
              "callType": "INTERNAL",
              "called": [],
              "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
              "depth": 0,
              "from": "0x0000000000000000000000000000000000000000",
              "functionName": "privateFunction",
              "functionType": "function",
              "lineEnd": 38,
              "lineStart": 35,
              "precompile": false,
              "rawData": "0x",
              "result": {
                "isCreate": false,
                "isError": false,
                "logs": [],
                "returnValueRaw": "",
                "type": "FunctionResultEvent",
              },
              "source": "test-contracts/internal-calls/CallerContract.sol",
              "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
              "type": "FunctionCallEvent",
              "value": 0n,
            },
          ],
          "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
          "depth": 0,
          "from": "0x0000000000000000000000000000000000000000",
          "functionName": "internalFunction",
          "functionType": "function",
          "lineEnd": 29,
          "lineStart": 25,
          "precompile": false,
          "rawData": "0x",
          "result": {
            "isCreate": false,
            "isError": false,
            "logs": [],
            "returnValueRaw": "",
            "type": "FunctionResultEvent",
          },
          "source": "test-contracts/internal-calls/CallerContract.sol",
          "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          "type": "FunctionCallEvent",
          "value": 0n,
        },
      ],
      "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
      "depth": 0,
      "from": "0x0000000000000000000000000000000000000000",
      "functionName": "publicFunction",
      "functionType": "function",
      "lineEnd": 44,
      "lineStart": 41,
      "precompile": false,
      "rawData": "0x",
      "result": {
        "isCreate": false,
        "isError": false,
        "logs": [],
        "returnValueRaw": "",
        "type": "FunctionResultEvent",
      },
      "source": "test-contracts/internal-calls/CallerContract.sol",
      "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
      "type": "FunctionCallEvent",
      "value": 0n,
    },
  ],
  "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
  "depth": 0,
  "from": "0x0000000000000000000000000000000000000000",
  "functionName": "mixedCall",
  "functionType": "function",
  "lineEnd": 23,
  "lineStart": 15,
  "precompile": false,
  "rawData": "0xd13caaaa0000000000000000000000000000000000000000000000000000000000000002",
  "result": {
    "isCreate": false,
    "isError": false,
    "logs": [
      {
        "args": {
          "message": "privateFunction called",
          "value": 0n,
        },
        "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
        "eventName": "Log",
        "eventSignature": "Log(string,uint256)",
        "functionName": "mixedCall",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
          ],
          "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000167072697661746546756e6374696f6e2063616c6c656400000000000000000000",
        ],
      },
      {
        "args": {
          "message": "internalFunction called",
          "value": 0n,
        },
        "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
        "eventName": "Log",
        "eventSignature": "Log(string,uint256)",
        "functionName": "mixedCall",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
          ],
          "0x000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000017696e7465726e616c46756e6374696f6e2063616c6c6564000000000000000000",
        ],
      },
      {
        "args": {
          "message": "privateFunction called",
          "value": 0n,
        },
        "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
        "eventName": "Log",
        "eventSignature": "Log(string,uint256)",
        "functionName": "mixedCall",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
          ],
          "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000167072697661746546756e6374696f6e2063616c6c656400000000000000000000",
        ],
      },
      {
        "args": {
          "message": "privateFunction called",
          "value": 0n,
        },
        "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
        "eventName": "Log",
        "eventSignature": "Log(string,uint256)",
        "functionName": "mixedCall",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
          ],
          "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000167072697661746546756e6374696f6e2063616c6c656400000000000000000000",
        ],
      },
      {
        "args": {
          "message": "internalFunction called",
          "value": 0n,
        },
        "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
        "eventName": "Log",
        "eventSignature": "Log(string,uint256)",
        "functionName": "mixedCall",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
          ],
          "0x000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000017696e7465726e616c46756e6374696f6e2063616c6c6564000000000000000000",
        ],
      },
      {
        "args": {
          "message": "privateFunction called",
          "value": 0n,
        },
        "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
        "eventName": "Log",
        "eventSignature": "Log(string,uint256)",
        "functionName": "mixedCall",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
          ],
          "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000167072697661746546756e6374696f6e2063616c6c656400000000000000000000",
        ],
      },
      {
        "args": {
          "message": "internalFunction called",
          "value": 0n,
        },
        "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
        "eventName": "Log",
        "eventSignature": "Log(string,uint256)",
        "functionName": "mixedCall",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
          ],
          "0x000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000017696e7465726e616c46756e6374696f6e2063616c6c6564000000000000000000",
        ],
      },
      {
        "args": {
          "message": "privateFunction called",
          "value": 0n,
        },
        "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
        "eventName": "Log",
        "eventSignature": "Log(string,uint256)",
        "functionName": "mixedCall",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
          ],
          "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000167072697661746546756e6374696f6e2063616c6c656400000000000000000000",
        ],
      },
      {
        "args": {
          "message": "internalFunction called",
          "value": 0n,
        },
        "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
        "eventName": "Log",
        "eventSignature": "Log(string,uint256)",
        "functionName": "mixedCall",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
          ],
          "0x000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000017696e7465726e616c46756e6374696f6e2063616c6c6564000000000000000000",
        ],
      },
    ],
    "returnValue": {
      "ok": true,
      "value": 25n,
    },
    "returnValueRaw": "0x0000000000000000000000000000000000000000000000000000000000000019",
    "type": "FunctionResultEvent",
  },
  "source": "test-contracts/internal-calls/CallerContract.sol",
  "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
  "type": "FunctionCallEvent",
  "value": 0n,
}
`;

exports[`internal-calls > test function fallback 1`] = `
{
  "args": [
    1n,
  ],
  "callType": "CALL",
  "called": [
    {
      "args": [],
      "callType": "CALL",
      "called": [],
      "contractFQN": "test-contracts/internal-calls/CalleeContract.sol:CalleeContract",
      "depth": 1,
      "from": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
      "functionName": "",
      "functionType": "fallback",
      "lineEnd": 29,
      "lineStart": 26,
      "precompile": false,
      "rawData": "0x307831",
      "result": {
        "isCreate": false,
        "isError": false,
        "logs": [
          {
            "args": [
              "0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512",
              "Fallback function called",
              0n,
            ],
            "contractFQN": "test-contracts/internal-calls/CalleeContract.sol:CalleeContract",
            "eventName": "Log",
            "eventSignature": "Log(address,string,uint256)",
            "functionName": "",
            "functionType": "fallback",
            "rawData": [
              "0x5fbdb2315678afecb367f032d93f642f64180aa3",
              [
                "0xfd33e90d0eac940755277aa91045b95664988beeeafc4ed7d1281a6d83afbc00",
                "0x000000000000000000000000e7f1725e7734ce288f8367e1bb143e90bb3f0512",
              ],
              "0x00000000000000000000000000000000000000000000000000000000000000400000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001846616c6c6261636b2066756e6374696f6e2063616c6c65640000000000000000",
            ],
          },
        ],
        "returnValueRaw": "0x307831",
        "type": "FunctionResultEvent",
      },
      "source": "test-contracts/internal-calls/CalleeContract.sol",
      "to": "0x5fbdb2315678afecb367f032d93f642f64180aa3",
      "type": "FunctionCallEvent",
      "value": 0n,
    },
    {
      "callType": "INTERNAL",
      "called": [
        {
          "callType": "INTERNAL",
          "called": [
            {
              "callType": "INTERNAL",
              "called": [],
              "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
              "depth": 0,
              "from": "0x0000000000000000000000000000000000000000",
              "functionName": "privateFunction",
              "functionType": "function",
              "lineEnd": 38,
              "lineStart": 35,
              "precompile": false,
              "rawData": "0x",
              "result": {
                "isCreate": false,
                "isError": false,
                "logs": [],
                "returnValueRaw": "",
                "type": "FunctionResultEvent",
              },
              "source": "test-contracts/internal-calls/CallerContract.sol",
              "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
              "type": "FunctionCallEvent",
              "value": 0n,
            },
          ],
          "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
          "depth": 0,
          "from": "0x0000000000000000000000000000000000000000",
          "functionName": "internalFunction",
          "functionType": "function",
          "lineEnd": 29,
          "lineStart": 25,
          "precompile": false,
          "rawData": "0x",
          "result": {
            "isCreate": false,
            "isError": false,
            "logs": [],
            "returnValueRaw": "",
            "type": "FunctionResultEvent",
          },
          "source": "test-contracts/internal-calls/CallerContract.sol",
          "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          "type": "FunctionCallEvent",
          "value": 0n,
        },
      ],
      "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
      "depth": 0,
      "from": "0x0000000000000000000000000000000000000000",
      "functionName": "publicFunction",
      "functionType": "function",
      "lineEnd": 44,
      "lineStart": 41,
      "precompile": false,
      "rawData": "0x",
      "result": {
        "isCreate": false,
        "isError": false,
        "logs": [],
        "returnValueRaw": "",
        "type": "FunctionResultEvent",
      },
      "source": "test-contracts/internal-calls/CallerContract.sol",
      "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
      "type": "FunctionCallEvent",
      "value": 0n,
    },
  ],
  "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
  "depth": 0,
  "from": "0x0000000000000000000000000000000000000000",
  "functionName": "callAnotherContractWithFallback",
  "functionType": "function",
  "lineEnd": 57,
  "lineStart": 52,
  "precompile": false,
  "rawData": "0x41fdd2fb0000000000000000000000000000000000000000000000000000000000000001",
  "result": {
    "isCreate": false,
    "isError": false,
    "logs": [
      {
        "args": [
          "0xe7f1725E7734CE288F8367e1Bb143E90bb3F0512",
          "Fallback function called",
          0n,
        ],
        "contractFQN": "test-contracts/internal-calls/CalleeContract.sol:CalleeContract",
        "eventName": "Log",
        "eventSignature": "Log(address,string,uint256)",
        "functionName": "callAnotherContractWithFallback",
        "functionType": "function",
        "rawData": [
          "0x5fbdb2315678afecb367f032d93f642f64180aa3",
          [
            "0xfd33e90d0eac940755277aa91045b95664988beeeafc4ed7d1281a6d83afbc00",
            "0x000000000000000000000000e7f1725e7734ce288f8367e1bb143e90bb3f0512",
          ],
          "0x00000000000000000000000000000000000000000000000000000000000000400000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000001846616c6c6261636b2066756e6374696f6e2063616c6c65640000000000000000",
        ],
      },
      {
        "args": {
          "message": "privateFunction called",
          "value": 0n,
        },
        "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
        "eventName": "Log",
        "eventSignature": "Log(string,uint256)",
        "functionName": "callAnotherContractWithFallback",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
          ],
          "0x0000000000000000000000000000000000000000000000000000000000000040000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000167072697661746546756e6374696f6e2063616c6c656400000000000000000000",
        ],
      },
      {
        "args": {
          "message": "internalFunction called",
          "value": 0n,
        },
        "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
        "eventName": "Log",
        "eventSignature": "Log(string,uint256)",
        "functionName": "callAnotherContractWithFallback",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
          ],
          "0x000000000000000000000000000000000000000000000000000000000000004000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000017696e7465726e616c46756e6374696f6e2063616c6c6564000000000000000000",
        ],
      },
      {
        "args": {
          "message": "callAnotherContractWithFallback executed",
          "value": 5n,
        },
        "contractFQN": "test-contracts/internal-calls/CallerContract.sol:CallerContract",
        "eventName": "Log",
        "eventSignature": "Log(string,uint256)",
        "functionName": "callAnotherContractWithFallback",
        "functionType": "function",
        "rawData": [
          "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
          [
            "0xdd970dd9b5bfe707922155b058a407655cb18288b807e2216442bca8ad83d6b5",
          ],
          "0x00000000000000000000000000000000000000000000000000000000000000400000000000000000000000000000000000000000000000000000000000000005000000000000000000000000000000000000000000000000000000000000002863616c6c416e6f74686572436f6e74726163745769746846616c6c6261636b206578656375746564000000000000000000000000000000000000000000000000",
        ],
      },
    ],
    "returnValue": {
      "ok": true,
      "value": 5n,
    },
    "returnValueRaw": "0x0000000000000000000000000000000000000000000000000000000000000005",
    "type": "FunctionResultEvent",
  },
  "source": "test-contracts/internal-calls/CallerContract.sol",
  "to": "0xe7f1725e7734ce288f8367e1bb143e90bb3f0512",
  "type": "FunctionCallEvent",
  "value": 0n,
}
`;
